ace/gap/        general.gi:        - `ACEPrintResearchExample' no longer prints the ##End line.        options.gi        - `PROCESS_ACE_OPTIONS' bug that caused options with values          that were lists that should have been, but weren't, ignored          fixed.        streams.gd, streams.gi        - `ACE_PRINT_AND_EVAL' function added. It is used in the          res-examples/do*.g files ace/res-examples/        pgrelfind.g:        - comments modified        - `ACEworkspace' option for `PGRelFind' now has default of 10^6        - syllable changed to bisyllable throughout `PGRelFind'        - `x', `y', `newF' variables are no longer local in          `TranslatePresentation'        - `suwo' changed to `sgens' globally        - `IsACEResExampleOK' added to diagnose user usage errors        doL28.g:        - modified to use `optex' option, so that user can get output in          manageable amounts (~100-200 lines)        doGrp.g:        - new generic do*.g file, has `grp' and `newgens' options for          experimentation with any of the groups with data in `presentations'        doJ1.g, doL216.g, doL232.g, doL33.g, doL35.g, doM11.g, doPSp44.g,        doU33.g, doU34.g:        - new do*.g files without any special options ace/doc/        ace.tex:        - `ACEPrintResearchExample' now prints the ``essential'' info.          contained in its file argument.        examples.tex:        - B.5 "Using ACEReadResearchExample" now says something useful        manual.bib:        - updated [CHHR00] entry to be a `to appear' article        - added [CMY79] and [CR84]        manual.{six,dvi}        - consequence of other changes ace/htm/*.htm:        Now a file-per-chapter version of the HTML manual.

--- a/doc/ace.tex
+++ b/doc/ace.tex
@@ -578,7 +578,7 @@ Also provided are:
 
 which perform `Read' (see Section~"ref:Read" in the  {\GAP}  Reference
 Manual) on <filename> or, with no argument,  the  file  with  filename
-`"pgrelfind.g"' in the `res-examples' directory; e.g.~ the  effect  of
+`"pgrelfind.g"' in the `res-examples' directory;  e.g.~the  effect  of
 running
 
 \beginexample
@@ -595,16 +595,16 @@ gap> Read( Filename(DirectoriesPackageLibrary("ace", "res-examples"),
 The examples provided in the `res-examples'  directory  were  used  to
 solve a genuine research problem, the results of which are reported in
 \cite{CHHR00}. Please see Section~"Using  ACEReadResearchExample"  for
-detailed descriptions of the research examples provided.
+a detailed description and examples of its use.
 
 \> ACEPrintResearchExample( <example-filename> ) F
 \> ACEPrintResearchExample( <example-filename>, <output-filename>) F
 
-print the file <example-filename> in the `res-examples'  directory  to
-the terminal, or with two arguments  to  the  file  <output-filename>;
-<example-filename>   and   <output-filename>   should   be    strings.
-`ACEPrintResearchExample' is provided to make it  easy  for  users  to
-copy and edit the examples for their own purposes.
+print the ``essential'' contents of the file <example-filename> in the
+`res-examples' directory to the terminal, or with two arguments to the
+file  <output-filename>;  <example-filename>   and   <output-filename>
+should be strings. `ACEPrintResearchExample' is provided  to  make  it
+easy for users to copy and edit the examples for their own purposes.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \Section{General Warnings regarding the Use of Options}
