--- a/doc/manual.bib
+++ b/doc/manual.bib
@@ -319,6 +319,36 @@
   PAGES         = {105--118}
 }
 
+@ARTICLE{CHHR00,
+  AUTHOR        = {Colin M. Campbell and George Havas and Alexander Hulpke
+                   and Edmund F. Robertson},
+  TITLE         = {The simple group {$L_3(5)$} is efficient},
+  JOURNAL       = {Communications in Algebra},
+  YEAR          = {to appear},
+}
+
+@ARTICLE{CMY79,
+  AUTHOR        = {Cannon, John J. and McKay, John and Young, Kiang Chuen},
+  TITLE         = {The non-abelian Simple groups {$G$}, 
+                   {$|G| \< 10^5$} --- presentations},
+  JOURNAL       = {Communications in Algebra},
+  VOLUME        = {7},
+  NUMBER        = {13},
+  YEAR          = {1979},
+  PAGES         = {1397--1406},
+}
+
+@ARTICLE{CR84,
+  AUTHOR        = {Colin M. Campbell and Edmund F. Robertson},
+  TITLE         = {Presentations for the Simple groups {$G$}, 
+                   {$10^5 \< |G| \< 10^6$}},
+  JOURNAL       = {Communications in Algebra},
+  VOLUME        = {12},
+  NUMBER        = {21},
+  YEAR          = {1984},
+  PAGES         = {2643--2663},
+}
+
 @ARTICLE{Hig51,
   AUTHOR        = {G. Higman},
   TITLE         = {A finitely generated infinite simple group},
@@ -393,17 +423,6 @@
                    The University of Queensland},
   YEAR          = {1999},
   NUMBER        = {14},
-  ADDRESS       = {St.~Lucia 4072, Australia}
-}
-
-@TECHREPORT{CHHR00,
-  AUTHOR        = {Colin M. Campbell and George Havas and Alexander Hulpke
-                   and Edmund F. Robertson},
-  TITLE         = {The simple group {$L_3(5)$} is efficient},
-  INSTITUTION   = {Centre for Discrete Mathematics and Computing,
-                   The University of Queensland},
-  YEAR          = {2000},
-  NUMBER        = {20},
   ADDRESS       = {St.~Lucia 4072, Australia}
 }
 
